# libmdk-capi

./: AudioFrame.cpp  CMakeLists.txt  LICENSE  MediaInfo.cpp  MediaInfoInternal.h  Player.cpp  README.md  RenderAPI.cpp  VideoFrame.cpp  global.cpp
include/mdk/c/: AudioFrame.h  MediaInfo.h  Player.h  RenderAPI.h  VideoFrame.h  global.h  module.h
include/mdk/cpp/: AudioFrame.h  MediaInfo.h  Player.h  RenderAPI.h  VideoFrame.h  global.h
